# FantasyBaseball

./: .gitignore  AGENTS.md  CLAUDE.md  HOW_TO.md  README.md  SETUP.md  TODO.md  bakeoff_actual_vs_immediate.txt  counterfactual_real_draft.txt  mc_finalslate_results.txt  mc_finalslate_v2_results.txt  post_season_analysis.md  pyproject.toml  render.yaml  replay_real_draft.txt  requirements.txt  review_notes.md  wsgi.py
.claude/: settings.local.json
.claude/agents/: baseball-scout.md  code-maintainability.md  data-scientist.md  software-engineer.md
.claude/commands/: group-review.md
.claude/skills/: group-review.md
config/: draft_order.json  league.yaml  league.yaml.example
data/: batch_sweep_results.csv  batch_sweep_results_final.csv  batch_sweep_results_old_vona.csv  batch_sweep_results_pos_vona.csv  debug_standings_raw.json  draft_state.json  draft_state_board.json  draft_state_delta.json  game_logs_2026.json  historical_drafts.json  historical_drafts_resolved.json  historical_standings.json  injuries.yaml  monte_carlo_results.csv  player_positions.json  roster_game_logs.json  run_monte_carlo.py  standings_2026.json  sweep_adp_jitter_results.csv  sweep_category_breakdown.txt  team_batting_stats.json  weekly_rosters_2026.json  weekly_schedule.json
data/analysis/: custom_sgp_denominators.md
data/drafts/: draft_2026-03-23_090943.json  draft_2026-03-23_092339.json  draft_2026-03-23_162607.json  draft_2026-03-24_071741.json  draft_2026-03-24_073122.json  draft_2026-03-24_073908.json  draft_2026-03-24_125032.json  draft_2026-03-24_140112.json  draft_2026-03-24_144231.json  draft_2026-03-24_150244.json  draft_2026-03-24_151050.json  draft_2026-03-24_162200.json  draft_2026-03-24_163517.json  draft_2026-03-24_164453.json  draft_2026-03-24_165216.json  draft_2026-03-24_172640.json  draft_2026-03-24_195356.json  draft_2026-03-24_195522.json  draft_2026-03-24_195809.json  mock_2026-03-22_132805.json  mock_2026-03-22_143210.json
data/history/: draft_results.json
data/projections/: README.md  atc-hitters.csv  atc-pitchers.csv  oopsy-hitters.csv  steamer-hitters-2025.csv  steamer-hitters.csv  steamer-pitchers.csv  zips-hitters-2025.csv  zips-hitters.csv  zips-pitchers.csv
data/rosters/: 2026-03-23_hart_roster.json  2026-03-25_hart_roster.json
data/sim_results/: 2026-03-22_071938_no_punt_stagger_vona.json  2026-03-22_072200_anti_fragile_var.json  2026-03-22_072200_anti_fragile_vona.json  2026-03-22_072200_avg_anchor_var.json  2026-03-22_072200_avg_anchor_vona.json  2026-03-22_072200_avg_hedge_var.json  2026-03-22_072200_avg_hedge_vona.json  2026-03-22_072200_balanced_var.json  2026-03-22_072200_balanced_vona.json  2026-03-22_072200_closers_avg_var.json  2026-03-22_072200_closers_avg_vona.json  2026-03-22_072200_default_var.json  2026-03-22_072200_default_vona.json  2026-03-22_072200_no_punt_opp_var.json  2026-03-22_072200_no_punt_opp_vona.json  2026-03-22_072200_no_punt_stagger_var.json  2026-03-22_072200_no_punt_stagger_vona.json  2026-03-22_072200_no_punt_var.json  2026-03-22_072200_no_punt_vona.json  2026-03-22_072200_nonzero_sv_var.json  2026-03-22_072200_nonzero_sv_vona.json  2026-03-22_072200_three_closers_var.json  2026-03-22_072200_three_closers_vona.json  2026-03-22_074109_anti_fragile_var.json  2026-03-22_074109_anti_fragile_vona.json  2026-03-22_074109_avg_anchor_var.json  2026-03-22_074109_avg_anchor_vona.json  2026-03-22_074109_avg_hedge_var.json  2026-03-22_074109_avg_hedge_vona.json  2026-03-22_074109_balanced_var.json  2026-03-22_074109_balanced_vona.json  2026-03-22_074109_closers_avg_var.json  2026-03-22_074109_closers_avg_vona.json  2026-03-22_074109_default_var.json  2026-03-22_074109_default_vona.json  2026-03-22_074109_no_punt_cap3_var.json  2026-03-22_074109_no_punt_cap3_vona.json  2026-03-22_074109_no_punt_opp_var.json  2026-03-22_074109_no_punt_opp_vona.json  2026-03-22_074109_no_punt_stagger_var.json  (+106 more)
data/stats/: game_logs_2025.json  hitters-2022.csv  hitters-2023.csv  hitters-2024.csv  hitters-2025.csv  pitchers-2022.csv  pitchers-2023.csv  pitchers-2024.csv  pitchers-2025.csv  recency_backtest_results.csv
design_mocks/: A_stadium_night.html  B_box_score_modern.html  C_hybrid_box_score_with_stadium_moves.html  C_hybrid_dark.html
docs/: cache_map.md  daily-summary-runbook.md  wsgp_audit.md
docs/bug_reports/: standings_mismatch_investigation.md  standings_mismatch_pr.md
docs/feature_specs/: cache_key_enum.md  cache_key_enum_plan.md  player_comparison_ros_regression_fix.md  projected_standings_active_slot_face_value.md  ros_only_decision_projections.md  spoe-design.md  spoe-implementation-plan.md  standings_stat_breakdown_modal.md  trade_constructor_mobile_dnd.md
docs/superpowers/: eye-test-eroto-unified-2026-06-15.md  games-mc-phase0-attribution-2026-06-26-raw.txt  games-mc-phase0-attribution-2026-06-26.md  (+7 more)
scripts/: adaptive_sweep.py  analyze_draft.py  analyze_history.py  analyze_mock.py  analyze_pt_shape.py  analyze_replacement_levels.py  audit_category_fragility.py  audit_sd_stress.py  audit_sd_validation.py  backfill_projected_standings_history.py  backtest_2025.py  backtest_2025_actuals.py  backtest_2025_proper.py  backtest_recency.py  backtest_sd_calibration.py  backtest_trades.py  bakeoff_actual_vs_immediate.py  batch_sweep.py  batch_sweep_final.py  batch_sweep_safe.py  batch_sweep_worker.py  build_db.py  calibrate_closer_mixture.py  calibrate_playing_time.py  calibrate_stat_dispersion.py  calibrate_variance.py  cleanroom_draft.py  compare_sgp_local_vs_remote.py  compare_strategies.py  counterfactual_real_draft.py  debug_eroto_avg.py  debug_eroto_recs.py  debug_standings_mismatch.py  derive_sgp_denominators.py  diag_mc_pt_experiment.py  diag_mc_vs_standings.py  diag_player_pt_sims.py  diag_replacement_depth.py  diag_snapshot_probe.py  discover_yahoo_stat_ids.py  (+37 more)
tests/: _cache_helpers.py  conftest.py  test_category_odds.py  test_config.py  test_distributions.py  test_integration.py  test_mc_fill.py  test_mc_integration.py  test_mc_roster.py  test_mc_selection.py  test_playing_time.py  test_scoring.py  test_simulation.py
(+570 files in other folders)
