[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-baseball"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yahoo-fantasy-api>=2.12",
    "yahoo-oauth>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "requests>=2.31",
    "pyyaml>=6.0",
    "flask>=3.0",
    "waitress>=3.0",
    "MLB-StatsAPI>=1.7",
    "gunicorn>=21.2",
    "upstash-redis>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
files = [
    "src/fantasy_baseball/models/",
    "src/fantasy_baseball/scoring.py",
    "src/fantasy_baseball/trades/evaluate.py",
    "src/fantasy_baseball/lineup/delta_roto.py",
    "src/fantasy_baseball/sgp/rankings.py",
]
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
