[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-baseball"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yahoo-fantasy-api>=2.12",
    "yahoo-oauth>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "requests>=2.31",
    "pyyaml>=6.0",
    "flask>=3.0",
    "waitress>=3.0",
    "MLB-StatsAPI>=1.7",
    "gunicorn>=21.2",
    "upstash-redis>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.10",
    "fakeredis>=2.21",
    "ruff>=0.6",
    "vulture>=2.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
files = [
    "src/fantasy_baseball/models/",
    "src/fantasy_baseball/scoring.py",
    "src/fantasy_baseball/simulation.py",
    "src/fantasy_baseball/trades/evaluate.py",
    "src/fantasy_baseball/lineup/delta_roto.py",
    "src/fantasy_baseball/lineup/leverage.py",
    "src/fantasy_baseball/sgp/denominators.py",
    "src/fantasy_baseball/sgp/rankings.py",
    "src/fantasy_baseball/sgp/replacement.py",
    "src/fantasy_baseball/sgp/var.py",
    "src/fantasy_baseball/sgp/player_value.py",
    "src/fantasy_baseball/analysis/recency.py",
    "src/fantasy_baseball/analysis/spoe.py",
    "src/fantasy_baseball/analysis/transactions.py",
    "src/fantasy_baseball/utils/constants.py",
    "src/fantasy_baseball/utils/name_utils.py",
    "src/fantasy_baseball/utils/positions.py",
    "src/fantasy_baseball/utils/rate_stats.py",
    "src/fantasy_baseball/utils/time_utils.py",
]
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "data",
    "docs",
    "logs",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "F",    # pyflakes: unused imports (F401), unused variables (F841), undefined names
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort: import ordering
    "UP",   # pyupgrade: modernize syntax for target-version
    "B",    # flake8-bugbear: likely bugs
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — formatter handles this
    "B008",   # function call in default arg (common Flask/click pattern)
    "SIM108", # ternary over if-else — not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B011"]           # unused fixtures / assert False ok in tests
"scripts/**" = ["F401"]                # scripts often import for side effects

[tool.ruff.lint.isort]
known-first-party = ["fantasy_baseball"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.vulture]
paths = ["src", "scripts"]
exclude = ["data/", "docs/", "logs/", ".venv/"]
min_confidence = 80
sort_by_size = true
ignore_decorators = [
    "@app.route",
    "@bp.route",
    "@*.route",
    "@pytest.fixture",
    "@pytest.mark.*",
    "@property",
    "@*.setter",
    "@dataclass",
]
ignore_names = [
    "setUp",
    "tearDown",
    "test_*",
]
