[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-baseball"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yahoo-fantasy-api>=2.12",
    "yahoo-oauth>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "requests>=2.31",
    "pyyaml>=6.0",
    "flask>=3.0",
    "waitress>=3.0",
    "MLB-StatsAPI>=1.7",
    "gunicorn>=21.2",
    "upstash-redis>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.10",
    "fakeredis>=2.21",
    "ruff>=0.6",
    "vulture>=2.11",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
files = [
    "src/fantasy_baseball/analysis/",
    "src/fantasy_baseball/auth/yahoo_auth.py",
    "src/fantasy_baseball/config.py",
    "src/fantasy_baseball/data/cache_keys.py",
    "src/fantasy_baseball/data/db.py",
    "src/fantasy_baseball/data/fangraphs.py",
    "src/fantasy_baseball/data/fangraphs_fetch.py",
    "src/fantasy_baseball/data/kv_store.py",
    "src/fantasy_baseball/data/kv_sync.py",
    "src/fantasy_baseball/data/mlb_game_logs.py",
    "src/fantasy_baseball/data/mlb_schedule.py",
    "src/fantasy_baseball/data/projection_quality.py",
    "src/fantasy_baseball/data/redis_store.py",
    "src/fantasy_baseball/data/ros_pipeline.py",
    "src/fantasy_baseball/data/yahoo_players.py",
    "src/fantasy_baseball/draft/balance.py",
    "src/fantasy_baseball/draft/board.py",
    "src/fantasy_baseball/draft/recommender.py",
    "src/fantasy_baseball/draft/roster_state.py",
    "src/fantasy_baseball/draft/search.py",
    "src/fantasy_baseball/draft/state.py",
    "src/fantasy_baseball/draft/strategy.py",
    "src/fantasy_baseball/draft/tracker.py",
    "src/fantasy_baseball/lineup/delta_roto.py",
    "src/fantasy_baseball/lineup/leverage.py",
    "src/fantasy_baseball/lineup/matchups.py",
    "src/fantasy_baseball/lineup/optimizer.py",
    "src/fantasy_baseball/lineup/roster_audit.py",
    "src/fantasy_baseball/lineup/waivers.py",
    "src/fantasy_baseball/lineup/weighted_sgp.py",
    "src/fantasy_baseball/lineup/yahoo_roster.py",
    "src/fantasy_baseball/models/",
    "src/fantasy_baseball/scoring.py",
    "src/fantasy_baseball/sgp/",
    "src/fantasy_baseball/simulation.py",
    "src/fantasy_baseball/trades/evaluate.py",
    "src/fantasy_baseball/trades/multi_trade.py",
    "src/fantasy_baseball/utils/",
    "src/fantasy_baseball/web/app.py",
    "src/fantasy_baseball/web/job_logger.py",
    "src/fantasy_baseball/web/refresh_steps.py",
    "src/fantasy_baseball/web/season_app.py",
    "src/fantasy_baseball/web/season_data.py",
]
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true

# Stricter rules for the draft subsystem, which was audited for type
# completeness in the draft-parity refactor. Extend this list as other
# subsystems are brought up to the same bar.
[[tool.mypy.overrides]]
module = "fantasy_baseball.draft.*"
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "data",
    "docs",
    "logs",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "F",    # pyflakes: unused imports (F401), unused variables (F841), undefined names
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort: import ordering
    "UP",   # pyupgrade: modernize syntax for target-version
    "B",    # flake8-bugbear: likely bugs
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — formatter handles this
    "B008",   # function call in default arg (common Flask/click pattern)
    "SIM108", # ternary over if-else — not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B011"]           # unused fixtures / assert False ok in tests
"scripts/**" = ["E402", "F401", "ARG"] # scripts inject sys.path before imports; also allow interface-shaped args
"tests/test_draft/test_run_draft_integration.py" = ["E402"]  # sys.path injection to import scripts/
"tests/test_scripts/**" = ["E402"]     # these tests import scripts/ modules via sys.path
# Strategy dispatcher: every pick_* function shares a fixed signature via
# STRATEGIES dict, so unused params are an interface contract, not dead code.
"src/fantasy_baseball/draft/strategy.py" = ["ARG001"]
# predict_* recency models share a fixed (projection, games, cutoff) signature
# so they can be swapped at the call site.
"src/fantasy_baseball/analysis/recency.py" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["fantasy_baseball"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.vulture]
paths = ["src", "scripts"]
exclude = ["data/", "docs/", "logs/", ".venv/"]
min_confidence = 80
sort_by_size = true
ignore_decorators = [
    "@app.route",
    "@bp.route",
    "@*.route",
    "@pytest.fixture",
    "@pytest.mark.*",
    "@property",
    "@*.setter",
    "@dataclass",
]
ignore_names = [
    "setUp",
    "tearDown",
    "test_*",
]
